# plate

linux64/: CMakeLists.txt  config.ini  http-server.cpp  main.cpp  plate.cpp  plate.h  readme.txt  start.sh
linux64/include/: TH_ErrorDef.h  TH_PlateID.h
linux64/lib/: LicenceFile  ManagerSrv  readme
